infrastructure/staging/routing/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oe-ingress
  namespace: genetics
spec:
  rules:
  - host: "oe.dev-k8s.labmed.de"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: oe-frontend
            port:
              name: web
  tls:
  - secretName: labmed-tls
